specs/grammar-tests/negative/no-chain-method.lace
get("$BASE_URL/health")
